2010-01-20  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Alexey Proskuryakov.

        WebSocket: Request-URI should not be empty when no tralling slash in host
        https://bugs.webkit.org/show_bug.cgi?id=33689

        * websocket/tests/handler_map.txt: Added.
          use websocket/tests/echo-location_wsh.py to handle request for
          ws://127.0.0.1:8880
        * websocket/tests/script-tests/url-no-trailing-slash.js: Added.
        * websocket/tests/url-no-trailing-slash-expected.txt: Added.
        * websocket/tests/url-no-trailing-slash.html: Added.
2010-01-20  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket: Request-URI should not be empty when no tralling slash in host
        https://bugs.webkit.org/show_bug.cgi?id=33689

        Test: websocket/tests/url-no-trailing-slash.html

        * websockets/WebSocketHandshake.cpp:
        (WebCore::resourceName):
2010-01-20  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket: Missing Request-URI, when no tralling slash in host
        https://bugs.webkit.org/show_bug.cgi?id=33689

        Update pywebsocket to 0.4.7.1, which supports alias for resource
        name, so that we could test for ws://127.0.0.1:8880

        * Scripts/run-webkit-tests:
        * Scripts/run-webkit-websocketserver:
        * pywebsocket/mod_pywebsocket/dispatch.py:
        * pywebsocket/mod_pywebsocket/handshake.py:
        * pywebsocket/mod_pywebsocket/standalone.py:
        * pywebsocket/setup.py:
        * pywebsocket/test/test_dispatch.py:
        * pywebsocket/test/test_handshake.py:

Canonical link: https://commits.webkit.org/44991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53592 268f45cc-cd09-0410-ab3c-d52691b4dbfc