WebKitTools/pywebsocket/test/test_dispatch.py
@@ -225,6 +225,17 @@ class DispatcherTest(unittest.TestCase):
         self.assertRaises(dispatch.DispatchError,
                           dispatch.Dispatcher, 'a/b/c', 'a/b')
 
+    def test_resource_path_alias(self):
+        disp = dispatch.Dispatcher(_TEST_HANDLERS_DIR, None)
+        disp.add_resource_path_alias('/', '/origin_check')
+        self.assertEqual(4, len(disp._handlers))
+        self.failUnless(disp._handlers.has_key('/origin_check'))
+        self.failUnless(disp._handlers.has_key('/sub/exception_in_transfer'))
+        self.failUnless(disp._handlers.has_key('/sub/plain'))
+        self.failUnless(disp._handlers.has_key('/'))
+        self.assertRaises(dispatch.DispatchError,
+                          disp.add_resource_path_alias, '/alias', '/not-exist')
+
 
 if __name__ == '__main__':
     unittest.main()
